@@ -11,5 +11,6 @@ Cache ability to block light
 //Removing air.
 AlterLuminance
 ChangeAlpha
-Limits in bitmap.cpp
+//Limits in bitmap.cpp
 AI equipment selection calls UpdatePictures() too often.
+igraph::RemoveUser()
